--- a/package.json
+++ b/package.json
@@ -18,7 +18,16 @@
   "homepage": "https://github.com/justin98m/Gods_kitchen#readme",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "express-openid-connect": "^2.10.0",
+    "express-session": "^1.17.3",
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.20",
+    "nunjucks": "^3.2.3",
+    "passport": "^0.6.0",
+    "passport-auth0": "^1.4.3",
+    "sqlstring": "^2.3.3"
   }
 }
